# testdisk

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .travis.yml  AUTHORS  Android.mk  CMakeLists.txt  ChangeLog  INFO  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.md  README_dev_photorec.txt  THANKS  acx_pthread.m4  autogen.sh  blacklist_cfi.txt  classifier.sh  compile.sh  config.h.in  configure  configure.ac  cygwin-testdisk-copr.spec  documentation.html  file_dss.c  mingw-testdisk-copr.spec  mkdir.m4  progsreiserfs-file-read.patch  progsreiserfs-journal.patch  sonar-project.properties  testdisk-copr.spec
.github/workflows/: ci.yml
cmake/: config.h.cmake
config/: config.rpath
copr/: cygwin-testdisk.spec  mingw-testdisk.spec  testdisk.spec
darwin/: readme.txt  readme_mac_intel.txt  readme_mac_powerpc.txt
doc/: Monobook.css  advanced_fat_repair.html  advanced_find_ext2_ext3_backup_superblock.html  advanced_ntfs_boot_and_mft_repair.html  after_using_photorec.html  after_using_testdisk.html  aplicaci_n_goback.html  apres_utilisation_de_testdisk.html  ausfehren_von_skript.html  ausfehren_von_testdisk.html  ausfuehren_von_testdisk.html  beschadigte_festplatte.html  busqueda_avanzada_del_superblock_de_backup_ext2_ext3.html  cdrw.html  cdrw_de.html  cdrw_es.html  cdrw_fr.html  comment_aider.html  commentaider.html  comoayudar.html  compilar_dos.html  compilar_linux.html  compilar_macosx.html  compilar_win.html  compile_dos.html  compile_linux.html  compile_macosx.html  compile_win.html  current_limitations.html  damaged_hard_disk.html  das_testdisk_team.html  data_recovery_examples.html  datentrager_abbildungen.html  digital_photos_recovery_using_photorec.html  digitale_foto_wiederherstellung_mit_photorec.html  discos_rigidos_rotos.html  disque_dur_endommage.html  donation.html  dos_bootdisk.html  dos_bootdiskette.html  (+115 more)
doc_src/: fidentify.8.in  photorec.1.in  testdisk.1.in  testdisk.8.in
dos/: readme.txt  testdisk.bat
icons/: Makefile.am
linux/: qphotorec.desktop  testdisk.spec.in
man/: Makefile.am  fidentify.8.in  photorec.8.in  qphotorec.8.in  testdisk.8.in
man/zh_CN/: Makefile.am  fidentify.8.in  photorec.8.in  qphotorec.8.in  testdisk.8.in
mingw/: mingw-testdisk.spec
src/: CMakeLists.txt  Makefile.am  Makefile.in  addpart.c  addpart.h  addpartn.c  addpartn.h  adv.c  adv.h  alignio.h  analyse.c  analyse.h  apfs.c  apfs.h  apfs_common.c  apfs_common.h  askloc.c  askloc.h  audit_trail.c  audit_trail.h  autoset.c  autoset.h  bcachefs.c  bcachefs.h  bcachefs_struct.h  bfs.c  bfs.h  bitlocker_detect.c  bitlocker_detect.h  block_queue.c  block_queue.h  bsd.c  bsd.h  btrfs.c  btrfs.h  case_metadata.c  case_metadata.h  chgarch.c  chgarch.h  chgarchn.c  (+715 more)
src/gnome/: README
src/lang/: qphotorec.ca.ts  qphotorec.cs.ts  qphotorec.el.ts  qphotorec.es.ts  qphotorec.fi.ts  qphotorec.fr.ts  qphotorec.it.ts  qphotorec.ja.ts  qphotorec.pl.ts  qphotorec.pt.ts  qphotorec.ru.ts  qphotorec.sv_SE.ts  qphotorec.tr.ts  qphotorec.zh_CN.ts  qphotorec.zh_TW.ts
tests/: CMakeLists.txt
win/: photorec_win.exe.manifest  qphotorec_win.exe.manifest  qt.conf  readme.txt  testdisk_win.exe.manifest
